Change link text from 'Open File' to 'Open'

--- a/index.html
+++ b/index.html
@@ -213,7 +213,7 @@ function renderTable(data) {
                 <td>${r.TYPE1}</td>
                 <td>${r.TYPE2}</td>
                 <td>${r.WHO}</td>
-                <td>${r.LINK ? `<a class='btn' href='${r.LINK}' target='_blank'>Open File</a>` : ""}</td>
+                <td>${r.LINK ? `<a class='btn' href='${r.LINK}' target='_blank'>Open </a>` : ""}</td>
             </tr>
         `;
     });
